fix z-index for search dropdown

--- a/src/components/SearchDropdown/SearchDropdown.css
+++ b/src/components/SearchDropdown/SearchDropdown.css
@@ -1,5 +1,5 @@
 .searchDropdownContainer {
-    z-index: 1;
+    z-index: 100;
     overflow: hidden auto;
     position: absolute;
     margin-top: 10px;
